Fix horizontal scroll bar

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,7 +1,7 @@
 .HomeMain {
   padding: 33vh 100px 0px 100px;
   color: white;
-  width: 100vw;
+  width: 100%;
   max-width: 1500px;
 }
 
